--- a/Games.html
+++ b/Games.html
@@ -34,8 +34,9 @@ body {
 <li style="color:white"> Warzone </li>
 <li style="color:white"> Roblox (but I rather not) </li> 
 <li style="color:white"> Valorant </li> 
+<li style="color:white"> Among Us </li>  
 <li style="color:white"> Ask/Dm for me for any other game if I its not listed  </li>
 </div> 
-<a href="My_website.html", style="color:white"> Return to Main Menu </a>
+<a href="index.html", style="color:white"> Return to Main Menu </a>
 </body>
 </html>
