--- a/My_socials.html
+++ b/My_socials.html
@@ -32,7 +32,7 @@ body {
 <a href="http://steamcommunity.com/id/123simon">Steam</a> 
 <br>
 <p> There are many more but I think that these are the ones that are most usefull for now. Dm me if there is anywhere else you need to contact.</p>
-<a href="My_website.html"> Return to Main Menu </a> 
+<a href="index.html"> Return to Main Menu </a> 
 </div> 
 </body>
 </html>
