--- a/other.html
+++ b/other.html
@@ -31,6 +31,6 @@ body {
 <li>Did you ever break something? I only had fractured bones(*cough right now 6/3/2020 cought*) but never fully broken</li>
 <li>Any other question, Dm me.</li>
 </ui>
-<a href="My_website.html"> Return to Main Menu </a>
+<a href="index.html"> Return to Main Menu </a>
 </body>
 </html>
