--- a/Help.html
+++ b/Help.html
@@ -12,7 +12,7 @@ body {
 <title>I can help (most of the time)</title>
 </head>
 <body>
-<h1> Need Help? </1>
+<h1> Need Help? </h1>
 <p>Since I am completely broke, I can help others with problems(for a price of course). Dm me on any social. Disclaimer!!!: I will try to the best of my ability and if anything goes wrong I'll not charge or just not take the offer!!!!</p>
 <ui>
 <li>Anything math related before Trig $1-2 question $20/hr tutoring</li>
@@ -25,6 +25,6 @@ body {
 <li>Print anything $0.05 Black & White page $1 for photos from your phone or camera</li>
 <li>Anything else that I may help with DM me.</li>
 </ui>
-<a href="My_website.html"> Return to Main Menu </a>
+<a href="index.html"> Return to Main Menu </a>
 </body>
 </html>
