--- a/About_me.html
+++ b/About_me.html
@@ -17,13 +17,14 @@ body {
 <p> This page is everything about me and overall fun facts! </p>
 <p> Here's a list of what you might want to know </p>
 <ui>
-<li> I am Simon or 123СаймонИграет and I am very decent at all most anything</li>
-<li> I know alot and am good at coding, server stuff, console and pc assembly, biking, skating (both roller and ice), lifting, fishing, gaming, editing, soccer, football, basketball(defence, not shooting), math, swimming, and more </li>
+<li> I am Simon or 123Саймон.</li>
+<li> I know alot and am good at coding and editing, server stuff, console and pc assembly, biking, skating (both roller and ice), lifting, fishing, gaming, editing, soccer, football, basketball(defence, not shooting), math, swimming, and more </li>
 <li> I am Russian Slovak American, basically of Eastern European origin    </li> 
-<li> Languages which I am fluent at are English and Russian. I can almost fully understand, but not speak, polish. I am learning French (and I'm pretty good) and took 3 years of Spanish and I don't remember anything. </li> 
-<li> I collect alot of things anything rangeing from coins to consoles. I collect rare US and Pre WWII and WWII British coins, Any tcg cards but mostly pokemon, Consoles, Pc parts, and something else I don't remember </li>   
+<li> Languages which I am fluent at are English and Russian. I can almost fully understand, but not speak, polish. I am learning French and think I am good at and took 3 years of Spanish and I don't remember anything. </li> 
+<li> I collect alot of things anything rangeing from coins to consoles. I collect rare coins, Any tcg cards but mostly pokemon, Consoles, Pc parts, and something else I don't remember </li>   
 <li> I can solve the rubik's cube in under a minute and I can solve other puzzles like a megaminx, pyraminx, 4x4, and more... </li>
-<li> I'll add anything if i remember something </li>
+<li> I will clap you in minecraft. </li>
+<li> [insert something here that you think of] </li>
 </ui>
 <a href= "index.html"> Return to Main Menu </a> 
 </div> 
