--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ body {
 }
 </style>
 <head>
-<title>123СаймонИграет</title>
+<title>123Саймон</title>
 </head>
 <body>
 <div class="intro">
-<h1> Hello to 123СаймонИграет's Website Est: 5/21/2020 </h1>
+<h1> Hello to 123Саймон's Website Est: 5/21/2020 - 8/20/2020 </h1>
 <p> Since it is the middle of quarantine (at the time of me writing) and there is nothing left for me to do, I made this website about myself. </p>
 <p> Here's a list of what you might want to know </p>
 <div style="position: relative; width: 640px;">
