--- a/My_socials.html
+++ b/My_socials.html
@@ -22,7 +22,7 @@ body {
 <br>
 <a href="https://www.instagram.com/simonfrny/?hl=en">Instagram</a> 
 <br>
-<a href="https://discord.gg/vEkuX9g">Discord</a><p> My tag is 123СаймонИграет#3593 </p> 
+<a href="https://discord.gg/vEkuX9g">Discord</a><p> My tag is 123Саймон#3593 </p> 
 <a href="https://account.xbox.com/en-us/Profile?xr=mebarnav&rtc=1">Microsoft/Xbox</a> 
 <br>
 <a href="https://www.twitch.tv/123simonplayz">Twitch</a> 
