--- a/other.html
+++ b/other.html
@@ -19,16 +19,19 @@ body {
 <li>When it comes to tutoring, is it virtual or visiting? I don't care, whatever you feel best suits you.</li>
 <li>How are you? Good</li>
 <li>Do you reply fast? Already did</li>
-<li>What your view on plagarism? I do not condone or like plagarism so if I am helping you with something don't expect me to do it all myself. I am helping for you to learn too!</li>
+<li>Whats your view on plagarism? I do not condone or like plagarism so if I am helping you with something don't expect me to do it all myself. I am helping for you to learn too!</li>
 <li>What do you mean by printing photos? I have a printer that can print regular sized photos (4"x6") and you can put in a frame or on the wall.</li>
-<li>How good are you at [nsert game]? Good and if Minecraft, Godly.</li>
+<li>How good are you at [insert game]? Good and if Minecraft, Godly.</li>
 <li>Do you play Fortnite? How low can you be to ask that? No</li>
-<li>How go are you at computers? More than you'll ever know unless I don't then a lot</li>
+<li>How go are you at computers? More than you'll ever know unless I don't. Then a lot</li>
 <li>How good are you at sports? I am chosen almost always 1st or 2nd on a team</li>
-<li>How big is your ego? No that big but online I can say what ever I want</li>
+<li>How big is your ego? Not that big but online I can say what ever I want</li>
 <li>Do you try hard at school or try to be top at anything? I don't care about school or being top since 2005</li>
 <li>What music do you listen to? "Literally anything" or "It's complicated". Pick one.</li>
-<li>Did you ever break something? I only had fractured bones(*cough right now 6/3/2020 cought*) but never fully broken</li>
+<li>Did you ever break something? I only had fractured bones(*cough right now 6/3/2020 cough*) but never fully broken</li>
+<li>Did you ever get stiches? Yes, once in 2nd grade when I broke my eyebrow, also in 2nd grade when I had a surgery, and recently when someone jumped on top of me in a pool and my nose was not so good at all. </li>
+<li>What school are you in? Does it matter to you? (BTHS) </li>
+<li>Why are you putting so much about yourself in here and not in about me? I don't know you tell me. </li>  
 <li>Any other question, Dm me.</li>
 </ui>
 <a href="index.html"> Return to Main Menu </a>
