--- a/Help.html
+++ b/Help.html
@@ -13,15 +13,15 @@ body {
 </head>
 <body>
 <h1> Need Help? </h1>
-<p>Since I am completely broke, I can help others with problems(for a price of course). Dm me on any social. Disclaimer!!!: I will try to the best of my ability and if anything goes wrong I'll not charge or just not take the offer!!!!</p>
+<p>Since I am completely broke, I can help others with problems. Dm me on any social. Disclaimer!!!: I will try to the best of my ability and if anything goes wrong I'll not charge or just not take the offer!!!!</p>
 <ui>
-<li>Anything math related before Trig $1-2 question $20/hr tutoring</li>
+<li>Anything math related before Trig $1 for 2 question $20/hr tutoring</li>
 <li>Fixing your coumputer $15-25 (depents if it's a setting or a internal problem) </li>
 <li>Fixing your phone with anything (not internally) and jailbreaking/rooting $10-15</li>
-<li>Solve your Rubik's cube $1.50</li>
-<li>Literally anything in Minecraft $2-30 (i.e.: Finding diamonds - Setting up a server on your computer + Plugins</li>
+<li>Solve your Rubik's cube </li>
+<li>Literally anything in Minecraft (i.e.: Finding diamonds - Setting up a server on your computer + Plugins</li>
 <li>Just homework if I can do it $(idk)</li>
-<li>Borrow a controller (Nintendo: n64 and above, PS3, Xbox One) $1 a day  Disclaimer: When I find that a control is returned broken, it must be replaced asap.</li>
+<li>Borrow a controller (Nintendo: n64 and above, PS3, Xbox One) $1 a day  Disclaimer: When I find that a control is returned broken, it must be replaced.</li>
 <li>Print anything $0.05 Black & White page $1 for photos from your phone or camera</li>
 <li>Anything else that I may help with DM me.</li>
 </ui>
