--- a/My_socials.html
+++ b/My_socials.html
@@ -30,6 +30,7 @@ body {
 <a href="https://www.reddit.com/u/123simon/?utm_source=share&utm_medium=ios_app&utm_name=iossmf">Reddit</a> 
 <br>
 <a href="http://steamcommunity.com/id/123simon">Steam</a> 
+<a href="https://www.ebay.com/usr/sirakha_3351">Ebay</a> <p> You might like something on there maybe to buy </p>
 <br>
 <p> There are many more but I think that these are the ones that are most usefull for now. Dm me if there is anywhere else you need to contact.</p>
 <a href="index.html"> Return to Main Menu </a> 
