--- a/About_me.html
+++ b/About_me.html
@@ -2,7 +2,7 @@
 <html>
 <style>
 body {
-  background-image: url('');
+  background-image: url('mayo.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
