--- a/About_me.html
+++ b/About_me.html
@@ -2,7 +2,7 @@
 <html>
 <style>
 body {
-  background-image: url('Minecraft.png');
+  background-image: url('social.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
