--- a/About_me.html
+++ b/About_me.html
@@ -13,18 +13,18 @@ body {
 </head>
 <body>
 <div class="intro">
-<h1> Welcome to the about me. </h1>
-<p> This page is everything about me and overall fun facts! </p>
-<p> Here's a list of what you might want to know </p>
+<h1 style="color:white"> Welcome to the about me. </h1>
+<p style="color:white"> This page is everything about me and overall fun facts! </p>
+<p style="color:white"> Here's a list of what you might want to know </p>
 <ui>
-<li> I am Simon or 123Саймон.</li>
-<li> I know alot and am good at coding and editing, server stuff, console and pc assembly, biking, skating (both roller and ice), lifting, fishing, gaming, editing, soccer, football, basketball(defence, not shooting), math, swimming, and more </li>
-<li> I am Russian Slovak American, basically of Eastern European origin    </li> 
-<li> Languages which I am fluent at are English and Russian. I can almost fully understand, but not speak, polish. I am learning French and think I am good at and took 3 years of Spanish and I don't remember anything. </li> 
-<li> I collect alot of things anything rangeing from coins to consoles. I collect rare coins, Any tcg cards but mostly pokemon, Consoles, Pc parts, and something else I don't remember </li>   
-<li> I can solve the rubik's cube in under a minute and I can solve other puzzles like a megaminx, pyraminx, 4x4, and more... </li>
-<li> I will clap you in minecraft. </li>
-<li> [insert something here that you think of] </li>
+<li style="color:white"> I am Simon or 123Саймон.</li>
+<li style="color:white"> I know alot and am good at coding and editing, server stuff, console and pc assembly, biking, skating (both roller and ice), lifting, fishing, gaming, editing, soccer, football, basketball(defence, not shooting), math, swimming, and more </li>
+<li style="color:white"> I am Russian Slovak American, basically of Eastern European origin    </li> 
+<li style="color:white"> Languages which I am fluent at are English and Russian. I can almost fully understand, but not speak, polish. I am learning French and think I am good at and took 3 years of Spanish and I don't remember anything. </li> 
+<li style="color:white"> I collect alot of things anything rangeing from coins to consoles. I collect rare coins, Any tcg cards but mostly pokemon, Consoles, Pc parts, and something else I don't remember </li>   
+<li style="color:white"> I can solve the rubik's cube in under a minute and I can solve other puzzles like a megaminx, pyraminx, 4x4, and more... </li>
+<li style="color:white"> I will clap you in minecraft. </li>
+<li style="color:white"> [insert something here that you think of] </li>
 </ui>
 <a href= "index.html"> Return to Main Menu </a> 
 </div> 
