--- a/My_socials.html
+++ b/My_socials.html
@@ -2,7 +2,7 @@
 <html>
 <style>
 body {
-  background-image: url('');
+  background-image: url('social.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -13,16 +13,16 @@ body {
 </head>
 <body>
 <div class="intro">
-<h1> My Socials </h1>
-<p> This page is for all my connections and socials </p>
-<p> Click to be directed to the website" </p> 
+<h1 style="color:white"> My Socials </h1>
+<p style="color:white"> This page is for all my connections and socials </p>
+<p style="color:white"> Click to be directed to the website" </p> 
 <a href="https://www.facebook.com/simon.rakhamimov.1/">Facebook</a> 
 <br>
 <a href="https://twitter.com/simonfrny">Twitter</a> 
 <br>
 <a href="https://www.instagram.com/simonfrny/?hl=en">Instagram</a> 
 <br>
-<a href="https://discord.gg/vEkuX9g">Discord</a><p> My tag is 123Саймон#3593 </p> 
+<a href="https://discord.gg/vEkuX9g">Discord</a><p style="color:white"> My tag is 123Саймон#3593 </p> 
 <a href="https://account.xbox.com/en-us/Profile?xr=mebarnav&rtc=1">Microsoft/Xbox</a> 
 <br>
 <a href="https://www.twitch.tv/123simonplayz">Twitch</a> 
@@ -31,9 +31,9 @@ body {
 <br>
 <a href="http://steamcommunity.com/id/123simon">Steam</a> 
 <br>
-<a href="https://www.ebay.com/usr/sirakha_3351">Ebay</a> <p> You might like something on there maybe to buy </p>
+<a href="https://www.ebay.com/usr/sirakha_3351">Ebay</a> <p style="color:white"> You might like something on there maybe to buy </p>
 <br>
-<p> There are many more but I think that these are the ones that are most usefull for now. Dm me if there is anywhere else you need to contact.</p>
+<p style="color:white"> There are many more but I think that these are the ones that are most usefull for now. Dm me if there is anywhere else you need to contact.</p>
 <a href="index.html"> Return to Main Menu </a> 
 </div> 
 </body>
