--- a/My_socials.html
+++ b/My_socials.html
@@ -33,7 +33,7 @@ body {
 <br>
 <a href="https://www.ebay.com/usr/sirakha_3351">Ebay</a> <p style="color:white"> You might like something on there maybe to buy </p>
 <br>
-<p style="color:white"> There are many more but I think that these are the ones that are most usefull for now. Dm me if there is anywhere else you need to contact.</p>
+<p style="color:white"> There are many more but I think that these are the ones that are most useful for now. Dm me if there is anywhere else you need to contact.</p>
 <a href="index.html"> Return to Main Menu </a> 
 </div> 
 </body>
