--- a/Help.html
+++ b/Help.html
@@ -13,7 +13,7 @@ body {
 </head>
 <body>
 <h1 style="color:white"> Need Help? </h1>
-<p style="color:white">Since I am completely broke, I can help others with problems. Dm me on any social. Disclaimer!!!: I will try to the best of my ability and if anything goes wrong I'll not charge or just not take the offer!!!!</p>
+<p style="color:white">Since I am completely broke, I can help others with problems. Dm me on any social. </p>
 <ui>
 <li style="color:white">Anything math related before Trig $1 for 2 question $20/hr tutoring</li>
 <li style="color:white">Fixing your coumputer $15-25 (depents if it's a setting or a internal problem) </li>
