--- a/Games.html
+++ b/Games.html
@@ -35,6 +35,7 @@ body {
 <li style="color:white"> Roblox (but I rather not) </li> 
 <li style="color:white"> Valorant </li> 
 <li style="color:white"> Among Us </li>  
+<li style="color:white"> SSB N64, Melee, Ultimate </li>
 <li style="color:white"> Ask/Dm for me for any other game if I its not listed  </li>
 </div> 
 <a href="index.html", style="color:white"> Return to Main Menu </a>
