--- a/Games.html
+++ b/Games.html
@@ -36,6 +36,8 @@ body {
 <li style="color:white"> Valorant </li> 
 <li style="color:white"> Among Us </li>  
 <li style="color:white"> SSB N64, Melee, Ultimate </li>
+<li style="color:white"> Fifa </li>
+<li style="color:white"> COC (clash of clans)
 <li style="color:white"> Ask/Dm for me for any other game if I its not listed  </li>
 </div> 
 <a href="index.html", style="color:white"> Return to Main Menu </a>
